--------------------------------------------------------------------------------------------------
Release notes version 1.9.3_beta : Enhancements, modifications and corrected bugs since version 1.9.2 :
--------------------------------------------------------------------------------------------------
09/11/23 (TRUST) New feature  : Introducing a new tool for dataset Python maniupulation and reference doc generation -> trustpy. Check out README.md in Outils/trustpy/doc
07/11/23 (TRUST) New option   : New option while launching TRUST executable -log_directory=<logs_dir>/ to save .log files into logs_dir (interesting for parallel computations)
07/11/23 (TRUST) New feature  : New interpreter "lml_to_lata" that can be used to convert lml files to single_lata format.
07/11/23 (TRUST) New feature  : New post-processing format "single_lata" that dumps results in a single binary lata file (Not supported in 64 bits integer build).
27/10/23 (TRUST) Tools        : Upgrade to MEDCoupling 9.12.0
23/10/23 (TRUST) New feature  : New method 'initBuildDirectory()' in Jupyter validation form Python API. It triggers build directory creation and copy src content into it.
23/10/23 (TRUST) Minor change : An arbitrary group of faces can now be loaded (not just internal or boundary ones) => in Read_MED, option 'include_internal_face_groups' is renamed into 'include_additional_face_groups'. In Perte_Charge_Singuliere, option 'internal_face_groups' is renamed into 'face_group'.
20/10/23 (TRUST) Fix          : Performance regression (switch from Mkl to OpenBlas) fixed for several solvers (MUMPS, GCP) on irene and topaze clusters
20/10/23 (TRUST) New option   : Add table_temps_lue option to Champ_Fonc_MED_Table_Temps keyword : Champ_Fonc_MED_Table_Temps { table_temps_lue file.txt | table_temps { ... } ... }
06/10/23 (TRUST) Minor change : TRUST can be linked to a pre-compiled static library of CoolProp 6.5.0 version (./configure -with-coolprop=<YOUR_PATH_TO_COOLPROP_INSTALL>).