@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------------------------
 Release notes version 1.9.3_beta : Enhancements, modifications and corrected bugs since version 1.9.2 :
 --------------------------------------------------------------------------------------------------
+13/11/23 (TRUST) New feature  : New option  for DP_impose keyword: dp_regul to regulate the DP in order to match a target flow rate.
 09/11/23 (TRUST) New feature  : Introducing a new tool for dataset Python maniupulation and reference doc generation -> trustpy. Check out README.md in Outils/trustpy/doc
 07/11/23 (TRUST) New option   : New option while launching TRUST executable -log_directory=<logs_dir>/ to save .log files into logs_dir (interesting for parallel computations)
 07/11/23 (TRUST) New feature  : New interpreter "lml_to_lata" that can be used to convert lml files to single_lata format.
